--- a/www/style/style.css
+++ b/www/style/style.css
@@ -20,7 +20,9 @@ body{
 
 
 .container h1{
-	font-size:18pt;
+	font-size: 26pt;
+	color: #333333;
+	margin-left: 5%;
 }
 
 .center{
@@ -28,21 +30,27 @@ body{
 }
 
 form{
-	margin-top:150px;
+	margin-top: 19px;
 }
 
 .input{
-	width:100%;
-	height:40px;
-	font-size:13pt;
-	padding-left:3px;
-	border:2px solid black;
+	width: 100%;
+	height: 40px;
+	font-size: 13pt;
+	padding-left: 3px;
+	border: 0px solid black;
 	font-weight: normal;
+	box-shadow: inset 0px 1px 5px black;
+	border-radius: 5px;
 }
 
 .underling{
-	width:65%;
-	margin-left:50px;
+	width: 101%;
+        margin-left: -2px;
+}
+
+.label {
+         margin-bottom: 5%;
 }
 
 .textArea{
