--- a/www/style/style.css
+++ b/www/style/style.css
@@ -54,6 +54,11 @@ form{
          font-size: 13px;
 }
 
+.on-site-label {
+	font-size:10px;
+	color: #333333;
+}
+
 .textArea{
 	width:100%;
 	height:90px;
