--- a/www/style/style.css
+++ b/www/style/style.css
@@ -33,8 +33,7 @@ form{
 	margin-top: 19px;
 }
 
-.input,
-.textArea {
+.input {
 	width: 100%;
 	height: 40px;
 	font-size: 13pt;
@@ -65,8 +64,10 @@ form{
 	height:90px;
 	font-size:13pt;
 	padding:3px 0 0 3px;
-	border:2px solid black;
+	border: 0px solid black;
 	font-weight: normal;
+	box-shadow: inset 0px 1px 5px black;
+	border-radius: 5px;
 }
 
 #startTime,
