--- a/www/style/style.css
+++ b/www/style/style.css
@@ -106,6 +106,15 @@ button{
 	height:40px;
 	font-size: 16pt;
 	float:right;
+	border-radius: 20px;
+background: rgba(240,240,240,1);
+background: -moz-linear-gradient(top, rgba(240,240,240,1) 0%, rgba(96,96,96,1) 100%);
+background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(240,240,240,1)), color-stop(100%, rgba(96,96,96,1)));
+background: -webkit-linear-gradient(top, rgba(240,240,240,1) 0%, rgba(96,96,96,1) 100%);
+background: -o-linear-gradient(top, rgba(240,240,240,1) 0%, rgba(96,96,96,1) 100%);
+background: -ms-linear-gradient(top, rgba(240,240,240,1) 0%, rgba(96,96,96,1) 100%);
+background: linear-gradient(to bottom, rgba(240,240,240,1) 0%, rgba(96,96,96,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', endColorstr='#606060', GradientType=0 );
 }
 
 #ui-datepicker-div{
