--- a/www/style/style.css
+++ b/www/style/style.css
@@ -54,7 +54,7 @@ form{
 font-size: 13px;
 background: none !important;
 color: #333333 !important;
-box-shadow: none !important;
+text-shadow: none !important;
 }
 
 .on-site-label {
