--- a/www/style/style.css
+++ b/www/style/style.css
@@ -110,6 +110,7 @@ button{
 	font-size: 16pt;
 	float:right;
 	border-radius: 20px;
+	border:0px;
 background: rgba(240,240,240,1);
 background: -moz-linear-gradient(top, rgba(240,240,240,1) 0%, rgba(96,96,96,1) 100%);
 background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(240,240,240,1)), color-stop(100%, rgba(96,96,96,1)));
