--- a/www/style/style.css
+++ b/www/style/style.css
@@ -57,7 +57,7 @@ color: #333333 !important;
 text-shadow: none !important;
 }
 
-.pageTwo .label {
+.pageTwo .checkbox {
 	border:1px solid #ffffff;
 }
 .on-site-label {
