--- a/www/style/style.css
+++ b/www/style/style.css
@@ -58,7 +58,14 @@ text-shadow: none !important;
 }
 
 .pageTwo .form-label {
-	border:1px solid #ffffff;
+	margin-bottom: 5%;
+font-size: 13px;
+background: none !important;
+color: #333333 !important;
+text-shadow: none !important;
+border: 1px solid #999999;
+border-radius: 3px;
+padding: 4px;
 }
 .on-site-label {
 	font-size: 12px;
