--- a/www/style/style.css
+++ b/www/style/style.css
@@ -74,6 +74,9 @@ background: -ms-linear-gradient(top, rgba(240,237,239,1) 0%, rgba(224,224,224,1)
 background: linear-gradient(to bottom, rgba(240,237,239,1) 0%, rgba(224,224,224,1) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0edef', endColorstr='#e0e0e0', GradientType=0 );
 }
+.label-inset {
+  margin-left:5%;
+}
 .on-site-label {
 	font-size: 12px;
         color: #6B6B6B;
