--- a/www/style/style.css
+++ b/www/style/style.css
@@ -58,25 +58,29 @@ text-shadow: none !important;
 }
 
 .pageTwo .form-label {
-	margin-bottom: 5%;
+	margin-bottom: -13%;
 font-size: 13px;
 color: #333333 !important;
 text-shadow: none !important;
 border: 1px solid #999999;
 border-radius: 3px;
 padding: 4px;
-background: rgba(240,237,239,1);
-background: -moz-linear-gradient(top, rgba(240,237,239,1) 0%, rgba(224,224,224,1) 100%);
-background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(240,237,239,1)), color-stop(100%, rgba(224,224,224,1)));
-background: -webkit-linear-gradient(top, rgba(240,237,239,1) 0%, rgba(224,224,224,1) 100%);
-background: -o-linear-gradient(top, rgba(240,237,239,1) 0%, rgba(224,224,224,1) 100%);
-background: -ms-linear-gradient(top, rgba(240,237,239,1) 0%, rgba(224,224,224,1) 100%);
-background: linear-gradient(to bottom, rgba(240,237,239,1) 0%, rgba(224,224,224,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0edef', endColorstr='#e0e0e0', GradientType=0 );
+background: #ffffff;
+background: -moz-linear-gradient(top, #ffffff 0%, #f4f4f4 57%);
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(57%,#f4f4f4));
+background: -webkit-linear-gradient(top, #ffffff 0%,#f4f4f4 57%);
+background: -o-linear-gradient(top, #ffffff 0%,#f4f4f4 57%);
+background: -ms-linear-gradient(top, #ffffff 0%,#f4f4f4 57%);
+background: linear-gradient(to bottom, #ffffff 0%,#f4f4f4 57%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f4f4f4',GradientType=0 );
 }
 .label-inset {
   margin-left: 10%;
 margin-top: -8%;
+}
+
+.pageTwo .checkbox {
+	margin-bottom:3%;
 }
 .on-site-label {
 	font-size: 12px;
