--- a/www/style/style.css
+++ b/www/style/style.css
@@ -105,6 +105,25 @@ margin-top: 1%;
 	margin-bottom: 3%;
 }
 
+.arrowright {
+background: #2C2C2C;
+font-size: 12px;
+position: relative;
+width: 1em;
+height: 1em;
+margin-left: -0.7em;
+}
+
+.arrowright::before {
+bottom: -0.666em;
+left: 0.8em;
+position: absolute;
+border-left: 1.2em solid #2C2C2C;
+border-top: 1.2em solid rgba(44, 44, 44, 0);
+border-bottom: 1.2em solid rgba(44, 44, 44, 0);
+content: "";
+}
+
 #startTime,
 #endTime{
 	float:none;
