--- a/www/style/style.css
+++ b/www/style/style.css
@@ -155,12 +155,13 @@ button{
 }
 
 #btnSave{
-	width:55%;
-	height:40px;
-	font-size: 16pt;
-	float:right;
-	border-radius: 20px;
-	border:0px;
+	width: 3.5em;
+height: 40px;
+font-size: 16pt;
+margin-left: 9em;
+border-radius: 20px;
+z-index: 0;
+border: 0px;
 background: rgba(240,240,240,1);
 background: -moz-linear-gradient(top, rgba(240,240,240,1) 0%, rgba(96,96,96,1) 100%);
 background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(240,240,240,1)), color-stop(100%, rgba(96,96,96,1)));
