--- a/www/style/style.css
+++ b/www/style/style.css
@@ -111,7 +111,9 @@ font-size: 12px;
 position: relative;
 width: 1em;
 height: 1em;
-margin-left: -0.7em;
+margin-left: 18.3em;
+margin-top: -19%;
+z-index: 150;
 }
 
 .arrowright::before {
