--- a/www/style/style.css
+++ b/www/style/style.css
@@ -109,16 +109,17 @@ margin-top: 1%;
 background: #2C2C2C;
 font-size: 12px;
 position: relative;
-width: 1em;
+width: 2.5em;
 height: 1em;
-margin-left: 18.3em;
-margin-top: -19%;
-z-index: 150;
+margin-left: 16em;
+margin-top: -20%;
+z-index: 194;
 }
 
 .arrowright::before {
 bottom: -0.666em;
-left: 0.8em;
+left: 2.2em;
+margin-left: -10%;
 position: absolute;
 border-left: 1.2em solid #2C2C2C;
 border-top: 1.2em solid rgba(44, 44, 44, 0);
@@ -160,7 +161,8 @@ button{
 	width: 3.5em;
 height: 40px;
 font-size: 16pt;
-margin-left: 9em;
+margin-left: 8em;
+margin-top: -1.2em;
 border-radius: 20px;
 z-index: 0;
 border: 0px;
