--- a/www/style/style.css
+++ b/www/style/style.css
@@ -177,11 +177,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 }
 
 .pageTwo #btnSave {
-	margin-top:10%;
-}
-
-.pageTwo .arrowright {
-	margin-top:10%;
+	width: 3.5em;
+height: 40px;
+font-size: 16pt;
+margin-left: 8em;
+margin-top: -1.2em;
+z-index: 0;
+border: 0px;
+background: rgba(240,240,240,1);
 }
 
 #ui-datepicker-div{
