--- a/www/style/style.css
+++ b/www/style/style.css
@@ -134,8 +134,8 @@ position: relative;
 width: 2.5em;
 height: 1em;
 margin-left: 3em;
-margin-top: -20%;
-z-index: 194;
+margin-top: -8%;
+z-index: 211;
 }
 
 .arrowleft::before {
@@ -146,6 +146,11 @@ border-right: 1.2em solid #2C2C2C;
 border-top: 1.2em solid rgba(44, 44, 44, 0);
 border-bottom: 1.2em solid rgba(44, 44, 44, 0);
 content: "";
+}
+
+.after-form {
+	background-color: #E6E6E6;
+}
 }
 
 #startTime,
@@ -214,10 +219,10 @@ background: rgba(240,240,240,1);
 	width: 3.5em;
 height: 40px;
 font-size: 16pt;
-margin-left: -4.5em;
-margin-top: 0.5em;
+margin-left: 0.5em;
+margin-top: -3em;
 border-radius: 20px;
-z-index: 0;
+z-index: 10;
 border: 0px;
 background: rgba(240,240,240,1);
 background: -moz-linear-gradient(top, rgba(240,240,240,1) 0%, rgba(96,96,96,1) 100%);
