--- a/www/style/style.css
+++ b/www/style/style.css
@@ -236,6 +236,21 @@ background: linear-gradient(to bottom, rgba(240,240,240,1) 0%, rgba(96,96,96,1) 
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', endColorstr='#606060', GradientType=0 );
 }
 
+.pageTwo #btnSaveLater {
+width: 100%;
+margin-top: -2em;
+font-size: 12px;
+background-color: #A4A4A4;
+text-decoration: underline;
+padding-top: 2%;
+padding-bottom: 2%;
+-moz-box-shadow: inset 0 0 5px #000000;
+-webkit-box-shadow: inset 0 0 5px #000000;
+box-shadow: inset 0 0 5px #000000;
+border: 0px !important;
+zoom: 1;
+}
+
 #ui-datepicker-div{
 	background:#ffffff;
 	border: 3px solid #000000;
