--- a/www/style/style.css
+++ b/www/style/style.css
@@ -311,4 +311,20 @@ margin-bottom: 4%;
 	{
 		height:62%;
 	}
+	form 
+	{
+		margin-top: -3px;
+	}
+	.label-inset
+	{
+		margin-top: -5%;
+	}
+	.pageTwo h3 {
+		margin-bottom: -5%;
+	}
+	.form-label 
+	{
+		padding: 3px;
+  		padding-bottom: 6px;
+	}
 }
