--- a/www/style/style.css
+++ b/www/style/style.css
@@ -322,7 +322,7 @@ margin-bottom: 4%;
 	.pageTwo h3 {
 		margin-bottom: -5%;
 	}
-	.form-label 
+	.pageTwo .form-label 
 	{
 		padding: 3px;
   		padding-bottom: 6px;
