--- a/www/style/style.css
+++ b/www/style/style.css
@@ -334,19 +334,19 @@ margin-bottom: 4%;
 		height:65%;
 	}
 	form {
-		margin-top: 180px;
+		margin-top: 39px;
 	}
 	.label-inset
 	{
-		margin-top: -5%;
+		margin-top: -6%;
 	}
 	.pageTwo h3 {
-		margin-bottom: -5%;
+		margin-bottom: -2%;
 	}
 	.pageTwo .form-label 
 	{
 		padding: 3px;
-  		padding-bottom: 6px;
+  		margin-bottom: 1em;
   		height: 62%;
 	}
 }
