--- a/www/style/style.css
+++ b/www/style/style.css
@@ -328,6 +328,7 @@ margin-bottom: 4%;
   		height: 62%;
 	}
 } */
+/*
 @media (orientation: landscape) {
 		* 
 	{
@@ -363,7 +364,7 @@ margin-bottom: 4%;
 	.pageTwo #btnBack {
 		  margin-top: -1.4em;
 	}
-}
+} */
 @media (orientation: portrait) {
 		* 
 	{
