--- a/www/style/style.css
+++ b/www/style/style.css
@@ -32,10 +32,6 @@ form{
 	margin-top: 12px;
 }
 
-.form-label-last {
-	margin-bottom:5%;
-}
-
 .input {
 	width: 100%;
 	height: 40px;
@@ -62,6 +58,26 @@ text-shadow: none !important;
 
 .pageTwo .form-label {
 	margin-bottom: -13%;
+	  margin-top: 15%;
+font-size: 13px;
+color: #333333 !important;
+text-shadow: none !important;
+border: 1px solid #999999;
+border-radius: 3px;
+padding: 4px;
+padding-bottom: 8px;
+background: #ffffff;
+background: -moz-linear-gradient(top, #ffffff 0%, #f4f4f4 57%);
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(57%,#f4f4f4));
+background: -webkit-linear-gradient(top, #ffffff 0%,#f4f4f4 57%);
+background: -o-linear-gradient(top, #ffffff 0%,#f4f4f4 57%);
+background: -ms-linear-gradient(top, #ffffff 0%,#f4f4f4 57%);
+background: linear-gradient(to bottom, #ffffff 0%,#f4f4f4 57%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f4f4f4',GradientType=0 );
+}
+
+.pageTwo .form-label-last {
+	margin-bottom:5%;
 	  margin-top: 15%;
 font-size: 13px;
 color: #333333 !important;
