--- a/www/style/style.css
+++ b/www/style/style.css
@@ -362,13 +362,19 @@ zoom: 1;
 		margin-top: -5.5%;
 	}
 	.pageTwo h3 {
-		margin-bottom: -2%;
+		margin-bottom: -18%;
 	}
 	.pageTwo .form-label 
 	{
 		padding: 3px;
-  		margin-bottom: 1em;
+  		margin-bottom: -13%;
   		height: 42%;
+	}
+	.pageTwo .form-label-last
+	{
+		padding: 4px;
+  		height: 39%;
+  		margin-bottom: -13%;
 	}
 	.pageTwo .after-form
 	{
