--- a/www/style/style.css
+++ b/www/style/style.css
@@ -402,6 +402,17 @@ zoom: 1;
   		margin-top: -10%;
 	}
 }
+
+@media (min-width:401px) and (max-width:500px) {
+	.label-inset {
+	    margin-top: -6.5%;
+	}
+}
+@media (min-width:501px) and (max-width:600px) {
+	.label-inset {
+	    margin-top: -5.5%;
+	}
+}
 /*
 @media (orientation: portrait) {
 		* 
