--- a/www/style/style.css
+++ b/www/style/style.css
@@ -409,7 +409,14 @@ zoom: 1;
 	}
 	.pageOne .after-form 
 	{
-	    margin-top: -5%;
+	    margin-top: -8%;
+	}
+	.arrowright{
+	  margin-left:42em;
+	    margin-top: 4%;
+	}
+	#btnSave{
+	    margin-left: 22.5em;
 	}
 }
 @media (min-width:501px) and (max-width:700px) {
