--- a/www/style/style.css
+++ b/www/style/style.css
@@ -486,12 +486,16 @@ zoom: 1;
   		margin-top: -10%;
 	}
 	.pageOne #btnSave{
-	    margin-left: 5.5em;
-  margin-top: -1em;
+	      margin-left: 23.8em;
+  margin-top: -2em;
 	}
 	.arrowright{
-	 margin-left: 11.7em;
-  margin-top: 10.5%;
+	   margin-left: 44em;
+  margin-top: 4%;
+
+	}
+	.pageOne .after-form {
+	    margin-top: -11%;
 	}
 }
 /*
